syntax = "proto3";
import "google/protobuf/timestamp.proto";
option go_package = "/proto";

service Multiplayer {
  rpc GameProcess (stream Request) returns (stream Response);
}

message Player {
  string id = 1;
  int64 x = 2;
  int64 y = 3;
}

message NewPlayer {
  string id = 1;
}

message Move {
  string playerId = 1;
  int64 x = 2;
  int64 y = 3;
}

message Ping {
  google.protobuf.Timestamp startTime = 1;
}

message Request {
  oneof action {
    NewPlayer newPlayer = 1;
    Move moveAction = 2;
    Ping ping = 3;
  }
}

message Pong {
  google.protobuf.Timestamp startTime = 1;
}

message Players {
  Player leftPlayer = 1;
  Player rightPlayer = 2;
}

message Response {
  oneof action {
    Pong pong = 1;
    Players players = 2;
  }
}